@@ -46,7 +46,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.18</version>
+            <version>1.18.22</version>
         </dependency>
 
         <dependency>
@@ -74,8 +74,8 @@
                     <encoding>${maven.compiler.encoding}</encoding>
                     <compilerArgs>
                         <arg>--enable-preview</arg>
-                        <arg>--add-exports</arg>
-                        <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                        <arg>--add-modules=jdk.compiler/com.sun.tools.javac.processing</arg>
+                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                     </compilerArgs>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
